@@ -54,11 +54,23 @@
     </nav>
 
     <div class="container-fluid main-block">
-        <div class="row">
-            <h1>Reconnect</h1>
+        <div class="main-block-content">
+            <div class="row">
+                <div class="product-image col-md-6 col-sm-6">
+                    <img src="img/weboost_drive.png" alt="weboost product" class="img-fluid">
+                </div>
+            </div>
+            <div class="product-description">
+                <div class="row">    
+                    <h1>We Help You Reconnect.</h1>
+                </div>            
+                <a href="https://ekhocomm.com/collections/car-truck-rv/products/drive-4g-x-470510" class="row">
+                    <button class="col-md-2 col-6">See in Store</button>
+                </a> 
+            </div>
         </div>
     </div>
-    
+    <!--  -->
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
